--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         .commission-buttons {
             margin: 5px 0;
-            margin-left: 130px;
+            margin-left: 50px;
         }
     </style>
 </head>
@@ -51,7 +51,7 @@
         <button onclick="clearField('field3')">清</button>
     </div>
     <div class="row">
-        <span class="label">月繳</span>
+        <span class="label">期繳</span>
         <input type="text" id="field4">
         <button onclick="calculateField4()">算</button>
         <button onclick="clearField('field4')">清</button>
