--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 10px;
             line-height: 2;
         }
         .row {
@@ -14,7 +14,7 @@
         }
         .label {
             display: inline-block;
-            width: 120px;
+            width: 110px;
             text-align: right;
             margin-right: 10px;
         }
@@ -86,19 +86,19 @@
         <input type="text" id="field9" readonly>
     </div>
     <div class="row">
-        <span class="label">每年百萬利息</span>
+        <span class="label">百萬每年利息</span>
         <input type="text" id="field10" readonly>
     </div>
     <div class="row">
-        <span class="label">每月百萬利息</span>
+        <span class="label">百萬每月利息</span>
         <input type="text" id="field11" readonly>
     </div>
     <div class="row">
-        <span class="label">每年一萬利息</span>
+        <span class="label">一萬每年利息</span>
         <input type="text" id="field12" readonly>
     </div>
     <div class="row">
-        <span class="label">每月一萬利息</span>
+        <span class="label">一萬每月利息</span>
         <input type="text" id="field13" readonly>
     </div>
 
