--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <button onclick="clearField('field8')">清</button>
     </div>
     <div class="row">
-        <span class="label">稅佣後</span>
+        <span class="label">稅佣後利率</span>
         <input type="text" id="field9" readonly>
     </div>
     <div class="row">
