--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <button onclick="clearField('principal')">清</button>
 </div>
 <div id="principalButtons">
-      <button onclick="adjustPrincipal(1000000)">+百</button>
-      <button onclick="adjustPrincipal(-1000000)">-百</button>
-      <button onclick="adjustPrincipal(100000)">+十</button>
-      <button onclick="adjustPrincipal(-100000)">-十</button>
-      <button onclick="adjustPrincipal(10000)">+萬</button>
-<button onclick="adjustPrincipal(-10000)">-萬</button>
+      <button onclick="adjustPrincipal(1000000)">+100</button>
+      <button onclick="adjustPrincipal(-1000000)">-100</button>
+      <button onclick="adjustPrincipal(100000)">+10</button>
+      <button onclick="adjustPrincipal(-100000)">-10</button>
+      <button onclick="adjustPrincipal(10000)">+1</button>
+<button onclick="adjustPrincipal(-10000)">-1</button>
 </div>
 <div class="row">
     <span class="label">期繳</span>
