--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@
 </div>
 
     <div class="row">
-        <span class="label">每年百萬利息</span>
+        <span class="label">百萬每年利息</span>
         <input type="number" id="annualMillionInterest" class="readonly" readonly>
     </div>
 
     <div class="row">
-        <span class="label">每月百萬利息</span>
+        <span class="label">百萬每月利息</span>
         <input type="number" id="monthlyMillionInterest" class="readonly" readonly>
     </div>
 
     <div class="row">
-        <span class="label">每年一萬利息</span>
+        <span class="label">一萬每年利息</span>
         <input type="number" id="annualTenThousandInterest" class="readonly" readonly>
     </div>
 
     <div class="row">
-        <span class="label">每月一萬利息</span>
+        <span class="label">一萬每月利息</span>
         <input type="number" id="monthlyTenThousandInterest" class="readonly" readonly>
     </div>
 
