--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-	 <meta name="viewport" content="width=412, user-scalable=no">
+	<meta name="viewport" content="width=392, user-scalable=no">
     <title>雞肉飯要每天吃</title>
     <style>
         :root {
@@ -13,17 +13,20 @@
             --hover-color: #357abd;
             --shadow-color: rgba(0, 0, 0, 0.1);
         }
-         html, body {
-            width: 412px;
-            min-width: 412px;
+        
+        /* 設定固定寬度和防止內容溢出 */
+        html, body {
+            width: 392px;
+            min-width: 392px;
             margin: 0 auto;
             overflow-x: hidden;
             -webkit-text-size-adjust: 100%;
+            padding: 0 5px;
         }
         
         body {
             font-family: "Microsoft JhengHei", Arial, sans-serif;
-            padding: 5px;
+            padding: 5px 0;
             background-color: #f8f9fa;
             color: var(--text-color);
         }
