--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=392, user-scalable=no">
+	<meta name="viewport" content="width=400, user-scalable=no">
     <title>雞肉飯要每天吃</title>
     <style>
         :root {
@@ -16,8 +16,8 @@
         
         /* 設定固定寬度和防止內容溢出 */
         html, body {
-            width: 392px;
-            min-width: 392px;
+            width: 400px;
+            min-width: 400px;
             margin: 0 auto;
             overflow-x: hidden;
             -webkit-text-size-adjust: 100%;
@@ -43,7 +43,7 @@
             align-items: center;
             background: white;
             padding: 3px;
-            border-radius: 20px;
+            border-radius: 1px;
             box-shadow: 0 3px 15px var(--shadow-color);
         }
         .label {
@@ -75,7 +75,7 @@
             border: none;
             padding: 3px 9px;
             margin: 0 5px;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
             font-size: 15px;
@@ -108,7 +108,7 @@
             color: var(--text-color);
             background: white;
             padding: 10px;
-            border-radius: 80px;
+            border-radius: 1px;
             box-shadow: 0 2px 4px var(--shadow-color);
         }
 
@@ -119,11 +119,11 @@
         }
 
          #periodButtons, #rateButtons, #principalButtons, #commissionButtons, #PaymentduringButtons {
-            margin: 10px 3px 20px 0;
+            margin: 5px 3px 13px 0;
             display: flex;
             flex-wrap: nowrap;
             gap: 8px;
-            width: calc(100% - 3px);
+            width: calc(100% - 2%);
             overflow-x: visible;
             white-space: nowrap;
             justify-content: flex-end;
