--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 	<div class="function-buttons">
     	<button onclick="location.reload()">全清</button>
     	<button onclick="saveData()">暫存</button>
-    	<button onclick="generateQuote()">報價截圖</button>
+    	<button onclick="generateQuote()">截圖</button>
 	</div>
 <script>
 	     // 添加更新時間的函數
