--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
     }
 
     html, body {
-        width: 400px;
-        min-width: 400px;
-        margin: 0 auto;
-        overflow-x: hidden;
-        -webkit-text-size-adjust: 100%;
-        padding: 0 5px;
-        background-color: #333333;
-        color: var(--text-color);
-        font-family: "Microsoft JhengHei", Arial, sans-serif;
-    }
+    	width: 100%;           /* 改為100%寬度 */
+    	max-width: 400px;      /* 設定最大寬度 */
+    	margin: 0 auto;
+    	overflow-x: hidden;
+    	-webkit-text-size-adjust: 100%;
+    	padding: 0 15px;       /* 增加左右padding */
+    	background-color: #333333;
+    	color: var(--text-color);
+    	font-family: "Microsoft JhengHei", Arial, sans-serif;
+    	box-sizing: border-box; /* 添加這行 */
+	}
 
     h1 {
         color: var(--text-color);
@@ -146,15 +147,15 @@
     }
 
     #periodButtons, #rateButtons, #principalButtons, #commissionButtons, #PaymentduringButtons {
-        margin: 2px 2px 5px 2;
-        display: flex;
-        flex-wrap: nowrap;
-        gap: 8px;
-        width: calc(100% - 2%);
-        overflow-x: visible;
-        white-space: nowrap;
-        justify-content: flex-end;
-    }
+    	margin: 2px 0 5px 0;    /* 修改邊距 */
+    	display: flex;
+    	flex-wrap: wrap;        /* 允許按鈕換行 */
+    	gap: 8px;
+    	width: 100%;            /* 修改寬度設定 */
+    	justify-content: flex-end;
+    	padding-right: 5px;     /* 添加右側padding */
+    	box-sizing: border-box; /* 添加這行 */
+	}
 
     button {
         flex-shrink: 0;
