--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
         background-color: var(--secondary-color);
         color: var(--button-orange);
         border: 1px solid var(--button-orange);
+        padding: 3px 8px;  /* 將左右內邊距從 8px 改為 6px */
+        margin: 0 3px;     /* 將左右外邊距改為 2px */
+        border-radius: 4px;
+        cursor: pointer;
         transition: all 0.3s ease;
+        font-size: 15px;
     }
 
     div[id$="Buttons"] button:hover {
@@ -147,10 +152,10 @@
     }
 
     #periodButtons, #rateButtons, #principalButtons, #commissionButtons, #PaymentduringButtons {
-    	margin: 2px 0 5px 0;    /* 修改邊距 */
+    	margin: 2px 1px 5px 1px;    /* 修改邊距 */
     	display: flex;
     	flex-wrap: wrap;        /* 允許按鈕換行 */
-    	gap: 8px;
+    	gap: 3px;
     	width: 100%;            /* 修改寬度設定 */
     	justify-content: flex-end;
     	padding-right: 5px;     /* 添加右側padding */
